--- a/app/modules/admin/layout/layout.phtml
+++ b/app/modules/admin/layout/layout.phtml
@@ -1,6 +1,55 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="utf-8" />
+    <title>Dashboard - DanteEHR</title>
 
- 
-	 <div id="content"> 
-	 	 <?php include $this->view ?>
-	 </div>
-  	
+    <meta name="description" content="overview &amp; stats" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- basic styles -->
+
+    <link href="<?=$_SESSION['site']['urltheme']?>assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="<?=$_SESSION['site']['urltheme']?>assets/css/font-awesome.min.css" />
+
+    <!--[if IE 7]>
+    <link rel="stylesheet" href="<?=$_SESSION['site']['urltheme']?>assets/css/font-awesome-ie7.min.css" />
+    <![endif]-->
+
+    <!-- page specific plugin styles -->
+
+    <!-- fonts -->
+
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" />
+
+    <!-- ace styles -->
+
+    <link rel="stylesheet" href="<?=$_SESSION['site']['urltheme']?>assets/css/ace.min.css" />
+    <link rel="stylesheet" href="<?=$_SESSION['site']['urltheme']?>assets/css/ace-rtl.min.css" />
+    <link rel="stylesheet" href="<?=$_SESSION['site']['urltheme']?>assets/css/ace-skins.min.css" />
+
+    <!--[if lte IE 8]>
+    <link rel="stylesheet" href="<?=$_SESSION['site']['urltheme']?>assets/css/ace-ie.min.css" />
+    <![endif]-->
+
+    <!-- inline styles related to this page -->
+
+    <!-- ace settings handler -->
+
+    <script src="<?=$_SESSION['site']['urltheme']?>assets/js/ace-extra.min.js"></script>
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+
+    <!--[if lt IE 9]>
+    <script src="<?=$_SESSION['site']['urltheme']?>assets/js/html5shiv.js"></script>
+    <script src="<?=$_SESSION['site']['urltheme']?>assets/js/respond.min.js"></script>
+    <![endif]-->
+</head>
+<body>
+<div id="content">
+    <?php include $this->view ?>
+</div>
+
+
+</body>
+</html>
